  server behavior when the house list is very long. 

--Fixed a punctuation error that was causing owner-died houses (that were 
  being robbed) to be deleted inccorectly (thanks Martin B.)

--House list now kept to 100 minimum by seeding randomly-selected abandonned,
  non-trivial houses with loot.  There are 1500 of these in the database.




Version 35      2014-March-31

--Prevented blocked family members from jumping back to positions on top of
  shotgun or panic button at the end of a robbery (allowed insta-kill and
  insta-press situations to be created).

--Fixed lingering 'ENTER to confirm' message in safe movement mode after move
  confirmation.

--Fixed safe movement mode to display cause-of-death messages right away
  (thanks Doug).

--Fixed edit-house movement keys getting stuck down when switching back and
  forth between self test (thanks MMaster).





Version 34    Live Server Fixes

--Fixed stale price list issue that could result in house loss after editing
  (thanks Mark Host).

--True doormat suicide now leaves a tape.

--Fixed paintings getting lost from the game if a robber who just stole a
  painting dies in another house before returning home with the painting 
  (thanks LiteS).





Version 34    2014-February-28

--Prevented multiple leave actions from being appended to the end of the move
  list if the player is mashing the keyboard while leaving a robbery.  This
  caused the family to be processed twice at the end, resulting in family
  duplication in the resulting map, leading to robber death from simulation
  mismatch.

--Blocked robber actions after death or reaching vault (in case of keyboard
  mashing where several key events might be queue for a given frame) to prevent
  family duplication due to multiple end actions.  Also added a check to always
  prevent multiple occurrences of family end processing.
 
--Fixed bug where family members jumped back to their starting postitions when